<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="170dp"
        android:layout_height="170dp"
        app:srcCompat="@drawable/logo"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_below="@+id/logo_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@drawable/inputs"
        android:drawableLeft="@drawable/email_1"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_below="@+id/login_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@drawable/inputs"
        android:drawableLeft="@drawable/password_1"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textSize="18sp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_below="@+id/login_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:background="@drawable/button"
        android:text="Login"
        android:textColor="@android:color/background_light"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/register_account_link"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_below="@+id/login_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/CreatnewAccount"
        android:textColor="@android:color/background_light"
        android:textSize="18dp">

    </TextView>
</RelativeLayout>